updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a plant manager for a mining company looking to change careers into software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Lockport IL. I went to college in Carbondale IL, worked in Kentucky and now I am back to IL.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include working out, camping and home improvement projects.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is a technical architect.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in New Lenox IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a software developer because I have a big interest in tech. I enjoy problem sovling and critical thinking while being creative. Lastly, I find satisfaction in building something.</p>
     </section>
 
     <footer id="footer">
